--- a/Whsprr.html
+++ b/Whsprr.html
@@ -24,6 +24,7 @@
             background-color: white;
             padding: 15px;
             border-radius: 10px;
+            width: 95%:
             border-style: solid;
             border-color: #C0C0C0;
             display: inline-block;
@@ -71,7 +72,7 @@
     <div id="container">
         <div id="speechBubble">
             <b>what you up to?</b><br>
-            <textarea id="emailBody" rows="1" cols="50" maxlength="100"></textarea><br>
+            <textarea id="emailBody" rows="1" cols="30" maxlength="100"></textarea><br>
             <button id="whsprrButton" onclick="generateEmailLink()">whsprr it</button>
         </div>
     </div>
