--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {font-family: Arial;}
   display: inline-block;
 }
 .top {
-  background-image: url('IMG_7408.JPG');  
+  background-image: url('IMG_0023.jpeg');  
   background-repeat: no-repeat;  
   background-attachment: fixed;    
   background-size: cover;
