--- a/Whsprr.html
+++ b/Whsprr.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://hashcomp.github.io/Whsprr/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>whsprr send</title>
     <style>
@@ -70,7 +71,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="speechBubble">
+        <div class="bubble mini top">
             <b>what you up to?</b><br>
             <textarea id="emailBody" rows="1" cols="20" maxlength="100"></textarea><br>
             <button id="whsprrButton" onclick="generateEmailLink()">whsprr it</button>
