--- a/Whsprr.html
+++ b/Whsprr.html
@@ -71,7 +71,7 @@
 </head>
 <body>
     <div id="container">
-        <div class="bubble mini top">
+        <div class="bubble grow left">
             <b>what you up to?</b><br>
             <textarea id="emailBody" rows="1" cols="20" maxlength="100"></textarea><br>
             <button id="whsprrButton" onclick="generateEmailLink()">whsprr it</button>
